--- a/html/user/concepts/TestCampaign.html
+++ b/html/user/concepts/TestCampaign.html
@@ -2,9 +2,31 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Insert title here</title>
+<title>TestCampaign</title>
 </head>
 <body>
 
+	<h1>TestCampaign</h1>
+	<p>
+	A <b>TestCampaign</b> is a dynamic collection of TestCases and their Executions.
+	</p>
+	<p>
+	A TestCampaign is displayed in the TestCampaign browser. There you can see the latest results (and browse others),
+	open TestCases and log files, and execute them again. You can also generate a report of your last execution.
+	</p>
+	<p>
+	The TestCases are taken from their TestSpecification,
+	and will be stored in the folder &quot;TestSpecification&quot;.
+	</p>
+	<p>
+	Each TestCase and its steps (PreCondition, TestStep(s), and PostCondition) are executed in a TestCampaign.
+	Information of each execution is saved in a TestCaseExecution (respectively a PreConditionExecution, TestStepExecution, andPostConditionExecution).
+	It covers the start time of the execution, the duration, the result, the name of the log file and the line the logging starts, and the URL
+	of the TestCase resource itself.This information will be stored in an XML file in the folder <b>ExecutionState</b>. 
+	</p>
+	<p>
+	The log files of the TestCampaign executions (and of the single log files for each TestCase, if that option was set in the Preferences) will be stored
+	in the folder TestResults.
+	</p>
 </body>
 </html>
