working on help topics (reviewed and continued)
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.doc/trunk@688 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/html/user/gettingstarted/UserGuide_RunTestCases.html
+++ b/html/user/gettingstarted/UserGuide_RunTestCases.html
@@ -8,7 +8,7 @@
 	<h1>User Guide:  Run TestCases</h1>
 	<p>
 	In a few steps, you will be able to create a TestCampaign out of TestCases in your TestSpecification.
-	You can also use the cheatSheet.
+	In order to get a quick overview, you can also use the cheatSheet.
 	</p>
 	
 	<h2>Create TestCampaign</h2>
