working on help topics (concepts and gettingstarted)
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.doc/trunk@696 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/html/user/gettingstarted/UserGuide_RunTestCases.html
+++ b/html/user/gettingstarted/UserGuide_RunTestCases.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>User Guide:  Run TestCases</h1>
 	<p>
-	In a few steps, you will be able to create a TestCampaign out of TestCases in your TestSpecification.
+	In a few steps, you will be able to create a TestCampaign out of TestCases in your TestSpecification and evaluate them.
 	In order to get a quick overview, you can also use the cheatSheet.
 	</p>
 	
@@ -48,6 +48,7 @@
     
     <h2>Browse TestCampaign Executions</h2>
     <p>
+    TODO
     </p>
     
     <h2>Status of TestCase Execution in TestCampaign Execution</h2>
