reviewed Cheat Sheets execute TestCases, Import of a TestSpec, and UserGuide Import of a TestSpec
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.doc/trunk@754 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
+++ b/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
@@ -2,30 +2,30 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>User Guide: Run TestCases</title>
+<title>Execute TestCases</title>
 </head>
 <body>
-	<h1>User Guide:  Run TestCases</h1>
+	<h1>Execute TestCases</h1>
 	<p>
 	In a few steps, you will be able to create a TestCampaign out of TestCases in your TestSpecification and evaluate them.
-	In order to get a quick overview, you can also use the cheatSheet.
+	In order to get a quick overview, you can also use the Cheat Sheet.
 	</p>
 	
 	<h2>Create TestCampaign</h2>
 	<p>
 	In your <b>TestSpecification</b>, select one or more TestCases. Right-click your mouse.
     You can either choose <b>&quot;RunTest&quot;</b> or <b>&quot;Create TestCampaign&quot;</b>.
-    If you choose &quot;RunTest&quot;, a TestCampaign will be created and run directly.
+    If you choose &quot;RunTest&quot;, a TestCampaign will be created and executed directly.
     </p>
 
-	<h2>Run TestCampaign</h2>
+	<h2>Execute TestCampaign</h2>
 	<p>
-	You can (re-) run your TestCampaign by clicking the <b>&quot;Execute&quot;</b> button.
+	You can (re-) execute your TestCampaign by clicking the <b>&quot;Execute&quot;</b> button.
 	</p>
 	
 	<h2>Generate Report</h2>
 	<p>
-	You can generate a report of your run by clicking the <b>&quot;Generate Report&quot;</b> button.
+	You can generate a report of your execution by clicking the <b>&quot;Generate Report&quot;</b> button.
     A folder browser will open where you can choose the folder you want the report to be saved in.
 	</p>
 	
