user guides execute TestCases and Create and export a TestSpec rewritten, minor corrections
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.doc/trunk@767 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/html/user/concepts/LogFiles.html
+++ b/html/user/concepts/LogFiles.html
@@ -12,7 +12,7 @@
 	If you open the log file for a step of a TestCase, it will highlight the line where its logging starts.
 	</p>
 	<p>
-	Due to the new GlobalTester APDU hover function, command APDUs can be easily read in the log files.
+	Command APDUs can now be easily read in the log files.
 	They are syntax highlighted, and if you hover over it with your mouse, the APDU command is declared in its parts.
 	You see the information
 	<ul>
