--- a/html/user/concepts/LogFiles.html
+++ b/html/user/concepts/LogFiles.html
@@ -8,20 +8,12 @@
 	<h1>Log Files</h1>
 	<p>
 	TestCampaigns and (if selected in the preferences) the single TestCases will have log files.
-	For the steps of a TestCase, i.e. PreCondition, TestStep(s), and PostCondition, the line number of their logging beginning will be stored.
+	For the steps of a TestCase, i.e. PreCondition, TestStep(s), and PostCondition, the line number where their logging begins will be stored.
 	If you open the log file for a step of a TestCase, it will highlight the line where its logging starts.
 	</p>
 	<p>
 	Command APDUs can now be easily read in the log files.
 	They are syntax highlighted, and if you hover over it with your mouse, the APDU command is declared in its parts.
-	You see the information
-	<ul>
-	<li>Which ISO Case command is used</li>
-	<li>CLA byte (indicates plain APDU or Secure Messaging)</li>
-	<li>INS (declares which command the APDU is)</li>
-	<li>P1 and P2 (possible protocols, etc.)</li>
-	<li>LC byte(s)</li>
-	<li>LE byte(s)</li>
 	</p>
 	<p>
 	The response APDUs are also highlighted and thus can be easily spotted. Status words are extracted and interpreted. 
