completed write a TestCase
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.doc/trunk@789 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
+++ b/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
@@ -47,7 +47,7 @@
 	Each execution of a TestCampaign will have an own <a href="../concepts/LogFiles.html">log file</a>.
 	You can see the whole communication between the card and the reader,
 	because the output of chip and reader of all executed TestCases is logged there.<br>
-	If you have selected &quot;Add separate logfile for each testcase&quot; in the Logging-Preferences,
+	If you have selected &quot;Add separate logfile for each testcase&quot; in the Preferences,
 	each executed TestCase will have its own log file.<br>
 	You can easily access the log files:
 	</p>
