--- a/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
+++ b/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
@@ -6,85 +6,103 @@
 </head>
 <body>
 	<h1>Execute TestCases</h1>
-	<p>
-	In a few steps, you will be able to create a TestCampaign out of TestCases in your TestSpecification and evaluate them.
-	In order to get a quick overview, you can also use the Cheat Sheet.
-	</p>
-	
+	<p>In a few steps, you will be able to create a TestCampaign out of
+		TestCases in your TestSpecification and evaluate them. In order to get
+		a quick overview, you can also use the Cheat Sheet.</p>
+
 	<h2>Setup Test Environment</h2>
 	<p>
-	 Make sure your card reader is connected to you computer.<br>
-	 If you have to connect it yet and GlobalTester 3 is running,
-	 GlobalTester 3 will not be able to recognize and embed it into its functionality, so please start GlobalTester 3 again.<br>
-	 Place your card on the reader.
+		Make sure your card reader is connected to you computer.<br> If
+		you have to connect it yet and GlobalTester 3 is running, GlobalTester
+		3 will not be able to recognize and embed it into its functionality,
+		so please start GlobalTester 3 again.<br> Place your card on the
+		reader.
 	</p>
-	
+
 	<h2>Import your TestSpecification</h2>
 	<p>
-	If not already done, import one or more
-	<a href="../../../../org.globaltester.testspecification.doc/html/user/gettingstarted/UserGuide_ImportOfATestSpec.html">TestSpecification(s)</a>.
+		If not already done, import one or more <a
+			href="../../../../org.globaltester.testspecification.doc/html/user/gettingstarted/UserGuide_ImportOfATestSpec.html">TestSpecification(s)</a>.
 	</p>
-	
+
 	<h2>Create and execute TestCampaign</h2>
 	<p>
-	  In the TestSpecification(s) you have chosen, select the TestCases you want to execute.
-	  Right-click with your mouse, and choose <b>&quot;Create TestCampaign&quot;</b>.
-	  A TestCampaign will be created and opened in the TestCampaign Editor.
-	  It consists of your selected TestCases, the execution states, the log files documenting the test results,
-	  and the subset of the TestSpecification(s) you have chosen (i.e. the TestCases you have chosen).<br>
-	  You can (re-) execute your TestCampaign by clicking the <b>&quot;Execute&quot;</b> button.	
+		In the TestSpecification(s) you have chosen, select the TestCases you
+		want to execute. Right-click with your mouse, and choose <b>&quot;Create
+			TestCampaign&quot;</b>. A TestCampaign will be created and opened in the
+		TestCampaign Editor. It consists of your selected TestCases, the
+		execution states, the log files documenting the test results, and the
+		subset of the TestSpecification(s) you have chosen (i.e. the TestCases
+		you have chosen).<br> You can (re-) execute your TestCampaign by
+		clicking the <b>&quot;Execute&quot;</b> button.
 	</p>
 	<p>
-	 There is also a shortcut to create and execute a TestCampaign directly:<br>
-	 In the TestSpecification(s) you have chosen, select the TestCases you want to execute.
-	 Right-click with your mouse, and this time choose <b>&quot;RunTest&quot;</b>.<br>
-     A TestCampaign will be created and executed directly.
-     Of course you can execute it again by clicking the <b>&quot;Execute&quot;</b> button.
+		There is also a shortcut to create and execute a TestCampaign
+		directly:<br> In the TestSpecification(s) you have chosen, select
+		the TestCases you want to execute. Right-click with your mouse, and
+		this time choose <b>&quot;RunTest&quot;</b>.<br> A TestCampaign
+		will be created and executed directly. Of course you can execute it
+		again by selecting or opening it and click the <b>&quot;Run
+			Test&quot;</b> command in the toolbar.
 	</p>
-	
+
 	<h2>Evaluate Log File(s)</h2>
 	<p>
-	Each execution of a TestCampaign will have an own <a href="../concepts/LogFiles.html">log file</a>.
-	You can see the whole communication between the card and the reader,
-	because the output of chip and reader of all executed TestCases is logged there.<br>
-	If you have selected &quot;Add separate logfile for each testcase&quot; in the Preferences,
-	each executed TestCase will have its own log file.<br>
-	You can easily access the log files:
+		Each execution of a TestCampaign will have an own <a
+			href="../concepts/LogFiles.html">log file</a>. You can see the whole
+		communication between the card and the reader, because the output of
+		chip and reader of all executed TestCases is logged there.<br> If
+		you have selected &quot;Add separate logfile for each testcase&quot;
+		in the Preferences, each executed TestCase will have its own log file.<br>
+		You can easily access the log files:
 	</p>
 	<p>
-	In the TestCampaign editor, you can see a tree view displaying the last execution of the TestCampaign structured in its sub-parts.
-    Right-click with your mouse on the root of the tree view which corresponds to the last execution of the TestCampaign,
-    and choose <b>&quot;Show log file&quot;</b>.
-    The log file of the last execution of the TestCampaign will open.<br>
-	You can access the corresponding log of each part of a TestCampaign the same way.<br>
-	For example, if you have selected the option for single log files for each TestCase in the prerefences,
-	logs of TestCases and their parts will be opened in the log file for the corresponding TestCase execution.
+		In the TestCampaign editor, you can see a tree view displaying the
+		last execution of the TestCampaign structured in its sub-parts.
+		Right-click with your mouse on the root of the tree view which
+		corresponds to the last execution of the TestCampaign, and choose <b>&quot;Show
+			log file&quot;</b>. The log file of the last execution of the
+		TestCampaign will open.<br> You can access the corresponding log
+		of each part of a TestCampaign the same way.<br> For example, if
+		you have selected the option for single log files for each TestCase in
+		the prerefences, logs of TestCases and their parts will be opened in
+		the log file for the corresponding TestCase execution.
 	</p>
 	<p>
-	If you have a <b>&quot;Failure&quot;</b> notice in the TestCampaign editor after an execution, 
-	you can find the error in the TestCase execution by looking for &quot;@FailureID1&quot;, &quot;@FailureID2&quot;, etc.
-    The lines in the  log file where they appear will have a red marker.
-    When you click on it, the line where the failure is quoted will be highlighted in the log file editor.<br>
-    Usually &quot;@FailureID1&quot; is the essential source of error.
-    For example, if you have no card placed on you reader, it will be the missing &quot;card&quot; reference.
-    </p>
-    <p>
-    The APDU commands are syntax highlighted, and if you hover over it with your mouse, the APDU command is declared in its parts.
+		If you have a <b>&quot;Failure&quot;</b> notice in the TestCampaign
+		editor after an execution, you can find the error in the TestCase
+		execution by looking for &quot;@FailureID1&quot;,
+		&quot;@FailureID2&quot;, etc. The lines in the log file where they
+		appear will have a red marker. When you click on it, the line where
+		the failure is quoted will be highlighted in the log file editor.<br>
+		Usually &quot;@FailureID1&quot; is the essential source of error. For
+		example, if you have no card placed on you reader, it will be the
+		missing &quot;card&quot; reference.
 	</p>
+	<p>The APDU commands are syntax highlighted, and if you hover over
+		it with your mouse, the APDU command is declared in its parts.</p>
 	<p>
-	The response APDUs are also highlighted and thus can be easily spotted.
-	Status words are extracted and interpreted.<br>
-	They can be checked, and be another source for a &quot;Failure&quot; notice.
-    </p>
-    
-    <h2>Generate Report</h2>
-    <p>
-    You can generate a <a href="../concepts/Report.html">report</a> of your execution by clicking the <b>&quot;Generate Report&quot;</b> button.
-    A folder browser will open where you can choose the folder you want the report to be saved in.<br>
-    The report comprises the details of your TestCampaign execution with results of each TestCase in a more human-readable way than the log files. 
-    </p>
-	
+		The response APDUs are also highlighted and thus can be easily
+		spotted. Status words are extracted and interpreted.<br> They can
+		be checked, and be another source for a &quot;Failure&quot; notice.
+	</p>
+
+	<h2>Generate Report</h2>
+	<p>
+		You can generate a <a href="../concepts/Report.html">report</a> of
+		your execution by clicking the <b>&quot;Generate Report&quot;</b>
+		button. A folder browser will open where you can choose the folder you
+		want the report to be saved in.<br> The report comprises the
+		details of your TestCampaign execution with results of each TestCase
+		in a more human-readable way than the log files.
+	</p>
+
 	<h2>Browse TestCampaign Executions</h2>
-	TODO
+	<p>While evaluating the log files you already used the execution
+		tree view in the TestCampaignEditor. Above you will find a selection
+		box where you can switch the display between different executions to
+		compare the results of several test runs. Also you can modify the
+		comments, view the logs and generate reports for older executions as
+		the complete state is persisted.</p>
 </body>
 </html>
