minor corrections in UserGuide
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.doc/trunk@1037 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
+++ b/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
@@ -13,9 +13,9 @@
 	<h2>Setup Test Environment</h2>
 	<p>
 		Make sure your card reader is connected to you computer.<br> If
-		you have to connect it yet and GlobalTester 3 is running, GlobalTester
+		you have to connect it yet and GlobalTester is running, GlobalTester
 		3 will not be able to recognize and embed it into its functionality,
-		so please start GlobalTester 3 again.<br> Place your card on the
+		so please start GlobalTester again.<br> Place your card on the
 		reader.
 	</p>
 
