update references to other plug-ins from relative to absolute paths
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.doc/trunk@1094 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/html/user/concepts/TestCampaign.html
+++ b/html/user/concepts/TestCampaign.html
@@ -13,9 +13,9 @@
 	The Executions are the dynamic part of a TestCampaign, and you can start them as often as you like.
 	</p>
 	<p>
-	The <a href="../../../../org.globaltester.testspecification.doc/html/user/concepts/TestCase.html">TestCases</a>
+	The <a href="PLUGINS_ROOT/org.globaltester.testspecification.doc/html/user/concepts/TestCase.html">TestCases</a>
 	that have been selected from their 
-	<a href="../../../../org.globaltester.testspecification.doc/html/user/concepts/TestSpecification.html">TestSpecification</a>
+	<a href="PLUGINS_ROOT/org.globaltester.testspecification.doc/html/user/concepts/TestSpecification.html">TestSpecification</a>
 	will be stored in the TestCampaign's subfolder &quot;TestSpecification&quot;.
 	There they can be accessed permanently, identically, and comparably to execute the TestCampaign.
 	</p>
