--- a/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
+++ b/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
@@ -22,7 +22,7 @@
 	<h2>Import your TestSpecification</h2>
 	<p>
 		If not already done, import one or more <a
-			href="../../../../org.globaltester.testspecification.doc/html/user/gettingstarted/UserGuide_ImportOfATestSpec.html">TestSpecification(s)</a>.
+			href="PLUGINS_ROOT/org.globaltester.testspecification.doc/html/user/gettingstarted/UserGuide_ImportOfATestSpec.html">TestSpecification(s)</a>.
 	</p>
 
 	<h2>Create and execute TestCampaign</h2>
