Note on changing the port number for debugging socket communication added.
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner.doc/trunk@1365 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d

--- a/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
+++ b/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
@@ -72,6 +72,9 @@
 			<li> Activate the <b>&quot;Connect&quot;</b> tab and change the connector type 
 			to <b>&quot;Mozilla Rhino – Attaching Connector&quot;</b>.
 			</li>
+			<li> If you want to change the port for the socket communication between the debugging 
+			threads, type in a different port number.
+			</li>			
 			<li> Activate the <b>&quot;Source&quot;</b> tab and remove the default location.
 			</li>
 			<li> Add the directories where your test cases are stored:
