--- a/org.globaltester.testrunner.doc/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
+++ b/org.globaltester.testrunner.doc/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
@@ -5,7 +5,7 @@
 <title>Execute TestCases</title>
 </head>
 <body>
-	<h1>Execute TestCases</h1>
+	<h1>Execute test cases in a TestCampaign</h1>
 	<p>In a few steps, you will be able to create a TestCampaign out of
 		TestCases in your TestSpecification and evaluate them. In order to get
 		a quick overview, you can also use the Cheat Sheet.</p>
