Reorganize Online Help

--- a/org.globaltester.testrunner.doc/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
+++ b/org.globaltester.testrunner.doc/html/user/gettingstarted/UserGuide_ExecuteTestCases.html
@@ -8,7 +8,7 @@
 	<h1>Execute test cases in a TestCampaign</h1>
 	<p>In a few steps, you will be able to create a TestCampaign out of
 		TestCases in your TestSpecification and evaluate them. In order to get
-		a quick overview, you can also use the Cheat Sheet.</p>
+		a quick overview, you can also use the Cheat Sheet. (Help->Cheat Sheets->execute test cases as a TestCampaign)</p>
 
 	<h2>Setup Test Environment</h2>
 	<p>
